--- a/tpp/tpp-war/src/main/resources/config.properties
+++ b/tpp/tpp-war/src/main/resources/config.properties
@@ -11,8 +11,8 @@ authorization.server.port=9444
 authorization.server.authorization.code.path=/oauth2/authorize
 authorization.server.authorization.token.path=/oauth2/token
 authorization.server.bic=aaaaaaaaaaa
-xs2a.server.schema=http
-xs2a.server.address=uedaexj1.spb.de
-xs2a.server.port=8080
+xs2a.server.schema=https
+xs2a.server.address=id-provider.sdv-it.de
+xs2a.server.port=443
 xs2a.server.path=/xs2a
 trust.all.certificates=true
